Full pipelines keep Stroom's chain: schema filter and record output filter do the dropping
On the user's direction the module's full-pipeline tests now keep the whole downstream chain
of Stroom's TestFileAppender — record count, split, schema filter, record output filter,
record count, writer, appender — and put one Shapeshifter configuration where the DS3
configuration and the stylesheet were. The configurations emit Eventy for the /bad requests
as the stylesheets do; the schema filter marks them and the record output filter drops them,
and the tests assert Stroom's own numbers. The filter shape runs after Stroom's own DS3 over
the records document's image. The event-logging schema comes from the content pack, behind
Stroom's own schema cache over a mocked store. Found and filed as E38: a structured
configuration cannot author the whitespace-only text node Stroom's text stylesheet uses to
end each line, so the text shape is pinned without its newlines until that is ruled.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>